WindGroup Dev/src/objects/COA_Balance__c.object
<CustomObject>
    <fields>
        <fullName>Account_Type__c</fullName>
        <formula>TEXT ( COA_Master__r.Account_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>COA_Master_FY_Balance__c</fullName>
        <label>COA Master FY Balance</label>
        <referenceTo>COA_Master_FY_Balance__c</referenceTo>
        <relationshipLabel>COA Balance</relationshipLabel>
        <relationshipName>COA_Balance</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>COA_Master__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>COA Master</label>
        <referenceTo>COA_Master__c</referenceTo>
        <relationshipLabel>COA Balance</relationshipLabel>
        <relationshipName>COA_Balance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>COA Balance</relationshipLabel>
        <relationshipName>COA_Balance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fiscal_Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fiscal Period</label>
        <referenceTo>Fiscal_Period__c</referenceTo>
        <relationshipName>Coa_Fiscal</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year_formula__c</fullName>
        <formula>Fiscal_Period__r.Fiscal_Year__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fiscal Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forecast__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Posted_Balance__c</fullName>
        <description>Posted Cr + Posted Cr</description>
        <formula>Posted_Cr__c +  Posted_Dr__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This should always be 0</inlineHelpText>
        <label>Posted Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Posted_Cr__c</fullName>
        <label>Posted Cr</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Posted_Dr__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Posted Dr</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unposted_Balance__c</fullName>
        <description>Unposted Cr + Unposted Dr</description>
        <formula>Unposted_Cr__c +  Unposted_Dr__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This should always be 0</inlineHelpText>
        <label>Unposted Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unposted_Cr__c</fullName>
        <label>Unposted Cr</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unposted_Dr__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Unposted Dr</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>COA Balance</label>
    <nameField>
        <label>COA Balance</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>COA Balance</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>